Fix word-wrap

--- a/src/styles/products.module.css
+++ b/src/styles/products.module.css
@@ -18,6 +18,8 @@
     -ms-hyphens: auto;
         hyphens: auto;
 
+   word-wrap: normal;     
+
 }
 
 /* Position content */
